--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CSSE_SEJ010_WD_04_Mobile">
         <activity
+            android:name=".Register_LocalUser"
+            android:exported="false" />
+        <activity
             android:name=".Users"
             android:exported="false" />
         <activity
